--- a/Vban/Vban.csproj
+++ b/Vban/Vban.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+      <PackageReference Include="NUnit" Version="3.11.0" />
+      <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
+    </ItemGroup>
+
 </Project>
