--- a/Vban/Vban.csproj
+++ b/Vban/Vban.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <IsPackable>true</IsPackable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>0.1.0</PackageVersion>
+        <PackageVersion>0.2.0</PackageVersion>
         <Title>VBAN Remote API</Title>
         <Authors>Kaleidox "burdoto"</Authors>
         <Description>C# port of burdoto's Java VBAN-API</Description>
